[package]
name = "aghub"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aghub_desktop_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies]
tauri-build = { version = "2", features = [  ] }

[dependencies]
tauri = { version = "2", features = [  ] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
aghub-api = { path = "../../api" }
tokio = { version = "1", features = [ "rt" ] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev = "c4c45d503ea115a839aae718d02f79e7c7f0f673" }
